[project]
name = "yt_consultant"
version = "0.1.0"
description = "yt_consultant using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.165.1,<1.0.0"
]

[project.scripts]
yt_consultant = "yt_consultant.main:run"
run_crew = "yt_consultant.main:run"
train = "yt_consultant.main:train"
replay = "yt_consultant.main:replay"
test = "yt_consultant.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
